# 3D-Rendering-Engine

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.claude/skills/tte-scene/: SKILL.md  reference.md  validate.sh
.claude/skills/tte-scene/examples/: custom-obj.scene  ground-and-primitives.scene  grouped-tower.scene
.github/workflows/: ci.yml  deploy.yml
crates/tte-cli/: Cargo.toml
crates/tte-cli/src/: frame.rs  interactive.rs  lib.rs  main.rs  present.rs  subject.rs
crates/tte-cli/tests/: e2e_cli.rs  e2e_render.rs
crates/tte-cli/tests/data/: scene.scene
crates/tte-cli/tests/snapshots/: e2e_cli__help_output.snap  e2e_render__headless_cube_80x24_frame0.snap  e2e_render__headless_orbit_yaw120_pitch20_r7_80x24.snap  e2e_render__headless_scene_80x32.snap  e2e_render__headless_solid_flat_ascii_80x24.snap  e2e_render__headless_solid_gouraud_ascii_80x24.snap
crates/tte-core/: Cargo.toml
crates/tte-core/benches/: iai_geom.rs  raster.rs
crates/tte-core/examples/: profile_frame.rs
crates/tte-core/src/: camera.rs  cell.rs  color.rs  dsl.rs  framebuffer.rs  geom_simd.rs  lib.rs  math.rs  mesh.rs  obj.rs  present.rs  primitives.rs  raster.rs  render.rs  scene.rs  shading.rs  solid.rs  triangle.rs  web_frame.rs
crates/tte-core/tests/: math_props.rs  public_api.rs  render_wireframe.rs  scene_dsl.rs
crates/tte-core/tests/snapshots/: render_wireframe__cube_default_80x24.snap  render_wireframe__cube_rotated_40x20.snap
crates/tte-wasm/: Cargo.toml
crates/tte-wasm/src/: lib.rs
crates/tte-wasm/tests/: web.rs
docs/: 00-project-brief.md  01-requirements-spec.md  02-test-harness.md  03-dev-setup.md  04-v2.0-scope.md  05-v2.1-scope.md  06-v2.2-scope.md
docs/research/: 01-engine-architectures.md  02-ascii-terminal-rendering.md  03-scene-formats-dsl.md  04-language-evaluation.md  05-mvp-scoping.md  06-rust-testing-best-practices.md  07-canvas-text-rendering.md  08-wasm-toolchain-size.md  09-simd-parallel-raster.md  10-wasm-threads-hosting.md  11-simd-profiling.md  11b-profile-results.md  12-github-pages-deploy.md  13-licensing.md  13b-dependency-license-audit.md  14-mobile-compatibility.md  14b-mobile-profile.md
scenes/: README.md
scripts/: adaptive.test.mjs  dpr-cap.mjs  package-lock.json  package.json  pixel-parity.mjs  smoke.mjs  webgl-parity.mjs
web/: README.md  adaptive.js  app.js  build.sh  gfx-util.js  index.html  presenter.js  renderer.js  webgl-renderer.js  worker.js
