[package]
name = "tte-wasm"
description = "Browser/WASM frontend for the text-encoded 3D rendering engine: a wasm-bindgen Renderer over tte-core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
# cdylib → the wasm artifact; rlib → native `cargo test` can link the logic.
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
# default-features = false → no rayon/`parallel` (stable wasm has no threads;
# rayon doesn't build for wasm32-unknown-unknown). FR-6.5 stretch revisits this.
# `simd` on: the geometry kernel uses `wide::f32x8`, which lowers to wasm `v128`
# with the `+simd128` target-feature set in .cargo/config.toml (W5). Frames stay
# byte-identical to scalar (FR-7.4).
tte-core = { path = "../tte-core", default-features = false, features = ["simd"] }
# Keep web-sys OUT (decision V4a): the module exposes only data; JS owns the
# canvas. wasm-bindgen alone marshals the typed-array frame buffers.
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
